# bot_telgram_Wallet

./: .gitignore  LICENSE  README.md
silver-accounting-bot/: .coverage  .env.example  AGENTS.md  Dockerfile  README.md  alembic.ini  docker-compose.production.yml  docker-compose.yml  local.db  pyproject.toml  requirements.txt
silver-accounting-bot/.github/workflows/: cd.yml  ci.yml
silver-accounting-bot/alembic/: env.py  script.py.mako
silver-accounting-bot/alembic/versions/: 0001_initial.py  0002_finance_risk.py  0003_settlement_reports.py  0004_payment_cards.py  0005_user_language.py  0006_price_provider_health.py  0007_settlement_batches.py  0008_production_hardening.py  0009_event_store_period_close.py  0010_enterprise_hardening.py  0011_audit_enhancements.py
silver-accounting-bot/deploy/: .env.production.template  nginx.conf
silver-accounting-bot/deploy/systemd/: bot.service  scheduler.service  worker.service
silver-accounting-bot/docs/: api.md  architecture.md  configuration_guide.md  database_schema.md  deployment_guide.md  developer_guide.md  erd.md  installation_guide.md  project_structure.md  sequence_diagrams.md
silver-accounting-bot/monitoring/: prometheus.yml
silver-accounting-bot/scripts/: generate_fernet_key.py
silver-accounting-bot/src/: main.py
silver-accounting-bot/src/application/: errors.py
silver-accounting-bot/src/core/: di.py  logging.py  security.py  settings.py  telemetry.py  time.py
silver-accounting-bot/src/domain/: enums.py  event_bus.py  events.py
silver-accounting-bot/src/tests/: conftest.py  test_app_services_flow.py  (+13 more)
(+92 files in other folders)
